--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<head>
 
 			<meta charset="UTF-8">
-			<title>Café de la Seine</title>
+			<title>My First</title>
 			<link rel=stylesheet href="css/style.css">
 			<script src="js/script.js"></script>
 
